--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vanil-stopwatch-js",
-  "version": "1.0.0-beta2",
+  "version": "1.0.0-beta3",
   "description": "A simple (Similar to dotnet's) stopwatch library for monitoring performance.",
   "main": "build/vanil-stopwatch.js",
   "directories": {
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/denizkanmaz/node-caching-example.git"
+    "url": "git+https://github.com/denizkanmaz/vanil-stopwatch-js"
   },
   "keywords": [
     "vanil-stopwatch-js", "stopwatch"
